...
            "state" : "translated",
            "value" : "Profil hinzufügen …"
          }
        }
      }
    },
    "Add to Favourites" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zu Favoriten hinzufügen"
          }
...
            "state" : "translated",
            "value" : "AirPlay"
          }
        }
      }
    },
    "All" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Alle"
          }
...
            "state" : "translated",
            "value" : "Audio"
          }
        }
      }
    },
    "Back 10 seconds" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "10 Sekunden zurück"
          }
...
            "state" : "translated",
            "value" : "Live-TV durchsuchen"
          }
        }
      }
    },
    "By name" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nach Name"
          }
...
            "state" : "translated",
            "value" : "Sender"
          }
        }
      }
    },
    "Channel schedule" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Senderprogramm"
          }
...
            "state" : "translated",
            "value" : "Auswählen…"
          }
        }
      }
    },
    "Classics" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Klassiker"
          }
...
            "state" : "translated",
            "value" : "Statistik löschen?"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schließen"
          }
...
            "state" : "translated",
            "value" : "Empfohlener Titel %1$lld von %2$lld"
          }
        }
      }
    },
    "Films" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filme"
          }
...
            "state" : "translated",
            "value" : "Als nicht gesehen markieren"
          }
        }
      }
    },
    "Mark as Watched" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Als gesehen markieren"
          }
...
            "state" : "translated",
            "value" : "Bild-in-Bild"
          }
        }
      }
    },
    "Play" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abspielen"
          }
...
            "state" : "translated",
            "value" : "Fortschritt"
          }
        }
      }
    },
    "Provider's order" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reihenfolge des Anbieters"
          }
...
            "state" : "translated",
            "value" : "Alles neu importieren"
          }
        }
      }
    },
    "Recently added" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zuletzt hinzugefügt"
          }
...
            "state" : "translated",
            "value" : "Beim Aktualisieren dieser Playlist ist etwas schiefgegangen."
          }
        }
      }
    },
    "Sort" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sortieren"
          }
...
            "state" : "translated",
            "value" : "Sport"
          }
        }
      }
    },
    "Start over" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Von vorn beginnen"
          }
...
            "state" : "translated",
            "value" : "Kassenschlager"
          }
        }
      }
    },
    "Top rated" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Am besten bewertet"
          }
...
            "state" : "translated",
            "value" : "Wird beim nächsten Öffnen von Panop aktiv."
          }
        }
      }
    },
    "TV Guide" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "TV-Programm"
          }
...
